<resources>
    <string name="app_name">Company_app_lab-3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_about">About</string>
    <string name="menu_map">Location</string>
    <string name="menu_contact">Contact</string>
    <string name="about_title">About me/Us</string>
    <string name="about_values">Our values</string>
    <string name="about_founder">Our founder</string>
    <string name="address_title">Address:</string>
    <string name="phone_num">+46764364214</string>
    <string name="email_id">ak.axtra.one@gmail.com</string>
    <string name="linked_in">https://www.linkedin.com/in/akshatasutar95</string>

</resources>